<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Truemeds</string>
    <string name="payment_option">Payment Option</string>
    <string name="clevertap_acc_id">4R6-66R-676Z</string>
    <string name="clevertap_token">266-624</string>
    <string name="truecaller_client_id">xhhw1vptftaowzun7y_qx_2w4zy6gewgpp70trc4ptc</string>
    <string name="xiaomi_app_key">5521832811310</string>
    <string name="xiaomi_app_id">2882303761518328310</string>
    <string name="facebook_app_id">2116213168673178</string>
    <string name="facebook_client_token">2da17c5b3d92e7ed23a1f7e3f915c6ef</string>
    <string name="singular_api_key" translatable="false">truemeds_91c8bac4</string>
    <string name="singular_secret" translatable="false">90b7890b1b38641ee3ca3ccce96582e2</string>
    <string name="current_location">Use current location</string>
    <string name="address_label">House number, Floor, Building name</string>
    <string name="address_label2">Street, Locality, Area</string>
    <string name="landmark_label">Landmark (Optional)</string>
    <string name="address1">21/24, Kailash Apartments</string>
    <string name="pincode_hint">400076</string>
    <string name="pincode_hint_new">Pincode</string>
    <string name="city_hint">Mumbai</string>
    <string name="city_hint_new">City</string>
    <string name="state_hint">Maharashtra</string>
    <string name="state_hint_new">State</string>
    <string name="address2">10th Main Rd, Indhiranagar</string>
    <string name="address_line_1_hint">Address Line 1</string>
    <string name="address3">near Children\'s park, etc</string>
    <string name="landmark_hint">Landmark</string>
    <string name="address_line_2_hint">Address Line 2</string>
    <string name="city_label">City</string>
    <string name="firstname_label">First name</string>
    <string name="patientName_label">Patient\'s name</string>
    <string name="patientAge_label">Patient\'s age</string>
    <string name="lastname_label">Last name</string>
    <string name="email_label">Email ID</string>
    <string name="mobilenumber_label">Mobile Number</string>
    <string name="age_label">Age</string>
    <string name="gender_label">Gender</string>
    <string name="male_label">Male</string>
    <string name="female_label">Female</string>
    <string name="other_label">Other</string>
    <string name="state_label">State</string>
    <string name="save_upto_51_by_choosing_the_recommended">Save upto 51% by choosing the \nrecommended substitutes</string>
    <string name="recently_searched">Recently searched</string>
    <string name="previously_viewed">Previously viewed</string>
    <string name="clear_underline"><u>clear</u></string>
    <string name="dont_worry">Dont worry!</string>
    <string name="call_to_add_medicine">Call to add your requested\nmedicine and we will find it for you</string>
    <string name="call_a_pharmacist">Call a pharmacist</string>
    <string name="seaching">Searching...</string>
    <string name="txtDidYouMean">Did you mean?</string>
    <string name="estimated_payable">Estimated Payable</string>
    <string name="estimated_payable_post_processing">Total amount will be calculated post processing</string>
    <string name="amount_to_be_paid_desc">Amount to be paid once the order is ready for dispatch</string>
    <string name="cod_msg">Pay online and get hassle-free delivery</string>
    <string name="current_payment_mode">Current payment mode: </string>
    <string name="view_bill">View bill</string>
    <string name="recommended">Recommended</string>
    <string name="faster_checkout">Faster checkout</string>
    <string name="change_to_cod">Change to COD</string>
    <string name="place_order">Place order</string>
    <string name="place_order_via_chc_msg">Place order via UPI at ₹</string>
    <string name="pay_rupee">Pay ₹</string>
    <string name="bill_details">Bill details</string>
    <string name="gst">GST</string>
    <string name="seller_packaging_charges">Seller packaging charges</string>
    <string name="frequently_asked_questions">FAQ\'s</string>
    <string name="frequently_asked_questions_refer_n_earn">Frequently asked questions</string>
    <string name="price_range_text"><i>To be selected in case of price change</i></string>
    <string name="unable_to_process">We were unable to process your payment. \nPlease try again</string>
    <string name="payment_unsuccessful">Payment Unsuccessful</string>
    <string name="try_again">Try again</string>
    <string name="dot_symbol">\u2022</string>
    <string name="tooltip_estimated_payable_message">Final price will be shown once the stock is confirmed</string>
    <string name="enterName">Please enter your patient\'s name</string>
    <string name="enterPatientName">Please enter patient\'s name</string>
    <string name="enterLastName">Please enter last name</string>
    <string name="enterValidLastName">Please enter a valid last name</string>
    <string name="enterValidFirstName">Please valid first name</string>
    <string name="enterEmail">Please enter a valid Email ID</string>
    <string name="email_id_saved_successfully">Email ID added</string>
    <string name="enterMobile">Please enter valid mobile number</string>
    <string name="enterAge">Please enter your age</string>
    <string name="please_enter_age">Please enter age</string>
    <string name="enterYourAge">Please enter your age</string>
    <string name="enterValidAge">Please enter valid age</string>
    <string name="enterPatientAge">Please enter patient\'s age</string>
    <string name="enterAddress">Please enter your address</string>
    <string name="enterComment">Please enter comment</string>
    <string name="selectAddress">Please select address</string>
    <string name="enterLocality">Please enter your locality</string>
    <string name="enterValidPinCode">Please enter a valid pincode</string>
    <string name="enterPinCode">Please enter a pincode</string>
    <string name="unableToFetchLocation">Unable to fetch current location. Please enter pincode.</string>
    <string name="enterState">Please enter your state</string>
    <string name="enterOther">Enter other</string>
    <string name="enterHint">Save as</string>
    <string name="enterOtherAddressExist">An address with this name already exists!</string>
    <string name="enterCity">Please enter your city</string>
    <string name="select_address_type">Please select an address type</string>
    <string name="please_enter_details">Please enter details</string>
    <string name="txtSelectDifferentAddress">Please select a different address</string>
    <string name="txtUnServiceableAddress">This address is no longer serviceable. Please change your address</string>
    <string name="item_out_of_stock">Added item is out of stock</string>
    <string name="medicines_not_deliverable">Added medicines are not deliverable at your location</string>
    <string name="timer_ends_string">Ends in 00m:00s</string>
    <string name="coupon_removed_msg">If the payment mode is changed, the payable amount will be adjusted accordingly.</string>
    <string name="change_mode">Change mode</string>
    <string name="dont_remove">Don\'t remove</string>
    <string name="cash_on_delivery_btn_text">Cash on delivery</string>
    <string name="show_other_payment_options">Show other payment options</string>
    <string name="alert">ALERT!</string>
    <string name="updateToNewVersion">New update available. Please update to newer version</string>
    <string name="updateNow">Update Now</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_register">Login/Register</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="logout">Logout</string>
    <string name="logout_btn_Text">Log out</string>
    <string name="don_t_log_out">Don\'t log out</string>
    <string name="or">OR</string>
    <string name="compare_and_choose">Compare and choose</string>
    <string name="recommended_substitute">Recommended Substitute</string>
    <string name="recommended_substitute_for">Recommended substitute for</string>
    <string name="selected_medicine">Selected Medicine</string>
    <string name="manage_address">Manage Address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="add_address">Add Address</string>
    <string name="address_type_msg">Address type already exists. Select another option.</string>
    <string name="add_new_patients">Add new patients</string>
    <string name="add_patient">Add Patient</string>
    <string name="manage_patients">Manage Patients</string>
    <string name="need_help">Need help?</string>
    <string name="still_have_questions">Still have questions?</string>
    <string name="contact_customer_support">Contact customer support</string>
    <string name="search_for_topic_or_question">Search for topic or question</string>
    <string name="how_do_you_wish_to_contact_us">How do you wish to contact us?</string>
    <string name="helpline">Helpline <font color='#178755'>\u2022</font></string>
    <string name="helpline_red"><![CDATA[Helpline <font color="#EB1414">\u2022</font>]]></string>
    <string name="working_hours">Working hours 9AM to 9PM</string>
    <string name="mail">Mail <font color='#178755'>\u2022</font></string>
    <string name="expect_reply_msg">Expect a reply in 24 hrs</string>
    <string name="my_orders">My Orders</string>
    <string name="search_for_medicines">Search for medicines</string>
    <string name="filters">Filters</string>
    <string name="order_status">Order status</string>
    <string name="patients">Patients</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="patient_details">Patient Details</string>
    <string name="your_details">Your details</string>
    <string name="firstname">First name</string>
    <string name="patient_firstname">Patient\'s first name</string>
    <string name="your_name">Your name</string>
    <string name="lastname">Last name</string>
    <string name="patient_lastname">Patient\'s last name</string>
    <string name="age">Age</string>
    <string name="patient_age">Patient\'s age</string>
    <string name="save">Save</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="your_first_name">Your first name</string>
    <string name="please_enter_a_valid_name">Please enter a valid name</string>
    <string name="patient_first_name">Patient\'s first name</string>
    <string name="your_last_name">Your last name</string>
    <string name="patient_last_name">Patient\'s last name</string>
    <string name="enter_first_name">Please enter first name</string>
    <string name="your_email_id">Your email id</string>
    <string name="your_age">Your age</string>
    <string name="patient_your_age">Patient\'s age</string>
    <string name="prescription">These details will be used for generating prescriptions and invoice.</string>
    <string name="save_and_continue">Save and continue</string>
    <string name="gender_validation">Please select gender</string>
    <string name="order_now2">Order now</string>
    <string name="order_with_prescription">Order with prescription</string>
    <string name="upload_to_place_order_msg">Upload prescription to place your order</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="no_save">No, save ₹</string>
    <string name="by_cancelling_this_order_you_will_miss_saving">By cancelling this order, you will miss saving ₹.</string>
    <string name="are_you_sure_you_want_cancel_this_order">Are you sure you want cancel this order</string>
</resources>