<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.intellihealth.truemeds.presentation.viewmodel.EditProfileDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.activity.EditProfileActivity">

        <com.intellihealth.salt.views.MobileSectionHeaders
            android:id="@+id/txtHeaderEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:translationZ="@dimen/d8"
            app:headerText="@string/edit_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtHeaderEditProfile">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingBottom="@dimen/d16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtHeader">

                    <com.intellihealth.salt.views.edittext.InputFieldLayout
                        android:id="@+id/edtFirstName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/d16"
                        android:layout_marginTop="@dimen/d16"
                        app:hintText="@string/your_first_name"
                        app:inputTypeLayout="capstext"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                        app:label="@string/firstname_label"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:setErrorMessage="@{viewModel.firstNameData}"
                        app:showButton="No"
                        app:showIcon="No" />

                    <com.intellihealth.salt.views.edittext.InputFieldLayout
                        android:id="@+id/edtLastName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/d16"
                        android:layout_marginTop="@dimen/d16"
                        app:hintText="@string/your_last_name"
                        app:label="@string/lastname_label"
                        android:visibility="@{viewModel.patientExperimentEditProfile.equals(`A`) ? View.GONE : View.VISIBLE }"
                        app:inputTypeLayout="capstext"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edtFirstName"
                        app:setErrorMessage="@{viewModel.lastNameData}"
                        app:showButton="No"
                        app:showIcon="No" />

                    <com.intellihealth.salt.views.edittext.InputFieldLayout
                        android:id="@+id/edtEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/d16"
                        android:layout_marginTop="@dimen/d16"
                        app:hintText="@string/your_email_id"
                        app:inputTypeLayout="email"
                        app:label="@string/email_label"
                        android:maxLines="1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edtLastName"
                        app:setErrorMessage="@{viewModel.emailData}"
                        app:showButton="No"
                        app:showIcon="No" />

                    <com.intellihealth.salt.views.edittext.InputFieldLayout
                        android:id="@+id/edtMobileNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/d16"
                        android:layout_marginTop="@dimen/d16"
                        app:inputTypeLayout="text"
                        app:label="@string/mobilenumber_label"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"

                        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
                        app:showButton="No"
                        app:showIcon="No" />

                    <com.intellihealth.salt.views.edittext.InputFieldLayout
                        android:id="@+id/edtAge"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/d16"
                        android:layout_marginTop="@dimen/d16"
                        app:hintText="@string/your_age"
                        app:inputTypeLayout="number"
                        app:label="@string/age_label"
                        app:maxLength="3"
                        app:maxLine="1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edtMobileNumber"
                        app:setErrorMessage="@{viewModel.ageData}"
                        app:showButton="No"
                        app:showIcon="No" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/genderCl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edtAge">

                        <com.intellihealth.salt.views.TextView
                            android:id="@+id/txtGender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/d16"
                            android:layout_marginTop="@dimen/d16"
                            android:text="@string/gender_label"
                            app:bodyTextStyle="BodyMediumSemiBold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <!--<com.intellihealth.salt.views.radiofield.RadioFieldLayout
                            android:id="@+id/radioMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txtGender"
                            app:radioLabel="@string/male_label"
                            app:radioPosition="right" />

                        <com.intellihealth.salt.views.radiofield.RadioFieldLayout
                            android:id="@+id/radiFemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/d10"
                            app:layout_constraintStart_toEndOf="@+id/radioMale"
                            app:layout_constraintTop_toBottomOf="@+id/txtGender"
                            app:radioLabel="@string/female_label"
                            app:radioPosition="right" />

                        <com.intellihealth.salt.views.radiofield.RadioFieldLayout
                            android:id="@+id/radioOther"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/d10"
                            app:layout_constraintStart_toEndOf="@+id/radiFemale"
                            app:layout_constraintTop_toBottomOf="@+id/txtGender"
                            app:radioLabel="@string/other_label"
                            app:radioPosition="right" />-->
                        <com.intellihealth.salt.views.radiofield.RadioList
                            android:id="@+id/rvListHorizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/d8"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txtGender"
                            app:radioDivider="true"
                            app:radioLabelPosition="right"
                            app:radioOrientation="horizontal"
                            app:radioPaddingHorizontal="8"
                            app:radioPaddingVertical="12" />

                        <com.intellihealth.salt.views.TextView
                            android:id="@+id/selfGenderValidation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/d16"
                            android:fontFamily="@font/inter_semibold"
                            android:text="@string/gender_validation"
                            android:visibility="@{viewModel.showGenderError ? View.VISIBLE : View.GONE}"
                            android:textColor="@color/tm_semantic_color_content_critical_default"
                            app:bodyTextStyle="BodySmallSemiBold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/rvListHorizontal" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                        <com.intellihealth.salt.views.buttons.Button
                            android:id="@+id/btnSaveProfile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/d16"
                            android:onClick="@{ () -> viewModel.onSaveButtonClicked() }"
                            app:buttonSizeType="Large"
                            app:buttonTextStyle="ButtonLg"
                            app:buttonType="PrimaryButton"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/genderCl"
                            app:title="Save" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{ viewModel.loaderValue ? View.VISIBLE : View.GONE }"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

